# finance-pipeline

./: .gitignore  AGENTS.md  Makefile  PROPOSAL.md  README.md  docker-compose.yml
app/: README.md  pyproject.toml
app/finance_pipeline/: __init__.py  binance_source.py  capture_onchain.py  dashboard_service.py  dashboard_state.py  kafka_utils.py  market_fixture.py  onchain_source.py  portfolio.py  portfolio_service.py  questdb_sink.py  replay.py  repo_config.py  schemas.py  settings.py  simulated_source.py  strategy.py  strategy_service.py  synthetic_fixture.py  volatility_labels.py
app/finance_pipeline/config/: repo_config.py  settings.py
app/finance_pipeline/core/: kafka_utils.py
app/finance_pipeline/research/: volatility_labels.py
app/finance_pipeline/services/: portfolio.py  portfolio_service.py  questdb_sink.py  strategy.py  strategy_service.py
app/finance_pipeline/sources/: binance_source.py  capture_onchain.py  onchain_source.py  replay.py  simulated_source.py  synthetic_fixture.py
app/finance_pipeline/storage/: market_fixture.py
app/finance_pipeline/web/: dashboard.html
app/tests/: test_market_tick.py  test_onchain_source.py  test_questdb_sink.py  test_repo_config.py  test_schemas.py  test_simulated_source.py  test_strategy.py  test_synthetic_fixture.py  test_volatility_labels.py
config/: development.secrets.example.yaml  development.yaml
data/sample/: btcusdt_ticks.csv
docker/flink/: Dockerfile
docker/grafana/dashboards/: finance-pipeline.json
docker/grafana/provisioning/dashboards/: dashboard.yaml
docker/grafana/provisioning/datasources/: questdb.yaml
docs/: architecture.md  binance-manual.md  data-sources.md  development-plan.md  parallel-status.md  runbook.md
scripts/: apply_topic_retention.sh  config_env.sh  create_topics.sh  init_questdb_schema.sh  port_state.sh  reset_dev_data.sh  reset_stack.sh  run_dashboard.sh  run_mvp.sh  start_dev_stack.sh  stop_stack.sh  wait_for_infra.sh  wait_for_questdb.sh
scripts/dev/: reset_dev_data.sh  reset_stack.sh  run_mvp.sh  start_dev_stack.sh  stop_stack.sh
scripts/infra/: apply_topic_retention.sh  create_topics.sh  init_questdb_schema.sh  wait_for_infra.sh  wait_for_questdb.sh
scripts/lib/: config_env.sh  port_state.sh
scripts/python/: capture_onchain.py  common.py  config_export.py  generate_synthetic_fixture.py  generate_vol_labels.py  portfolio_service.py  questdb_sink.py  replay_market.py  strategy_service.py  stream_binance.py  stream_onchain.py  stream_simulated.py
sql/: market_features.sql
