[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-pipeline"
version = "0.1.0"
description = "MVP crypto market data pipeline with Kafka, Flink SQL, and simple strategy services."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "kafka-python>=2.2.15,<3.0.0",
  "websockets>=15.0.1,<16.0.0",
  "PyYAML>=6.0.2,<7.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5,<9.0.0",
]

[project.scripts]
replay-market = "finance_pipeline.sources.replay:main"
strategy-service = "finance_pipeline.services.strategy_service:main"
portfolio-service = "finance_pipeline.services.portfolio_service:main"
stream-binance = "finance_pipeline.sources.binance_source:main"
stream-onchain = "finance_pipeline.sources.onchain_source:main"
capture-onchain = "finance_pipeline.sources.capture_onchain:main"
generate-synthetic-fixture = "finance_pipeline.sources.synthetic_fixture:main"
stream-simulated = "finance_pipeline.sources.simulated_source:main"
config-export = "finance_pipeline.config.repo_config:main"
questdb-sink = "finance_pipeline.services.questdb_sink:main"
generate-vol-labels = "finance_pipeline.research.volatility_labels:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["finance_pipeline*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
