[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-pipeline"
version = "0.1.0"
description = "MVP crypto market data pipeline with Kafka, Flink SQL, and simple strategy services."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "kafka-python>=2.2.15,<3.0.0",
  "websockets>=15.0.1,<16.0.0",
  "PyYAML>=6.0.2,<7.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5,<9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["finance_pipeline*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
